sync endpoint added
