# src/rest_api.py
@@ -1,6 +1,6 @@
 """Definition of the routes for gemini server."""
-import os
 import flask
+import os
 import requests
 from flask import Flask, request
 from flask_cors import CORS
@@ -15,6 +15,7 @@ from repo_dependency_creator import RepoDependencyCreator
 from notification.user_notification import UserNotification
 from fabric8a_auth.errors import AuthError
 import sentry_sdk
+from requests_futures.sessions import FuturesSession
 
 
 app = Flask(__name__)
@@ -23,6 +24,12 @@ CORS(app)
 sentry_sdk.init(os.environ.get("SENTRY_DSN"))
 
 init_selinon()
+_session = FuturesSession(max_workers=3)
+
+_SERVICE_HOST = os.environ.get("BAYESIAN_DATA_IMPORTER_SERVICE_HOST", "bayesian-data-importer")
+_SERVICE_PORT = os.environ.get("BAYESIAN_DATA_IMPORTER_SERVICE_PORT", "9192")
+_CVE_SYNC_ENDPOINT = "api/v1/sync_latest_non_cve_version"
+_LATEST_VERSION_SYNC_ENDPOINT = "api/v1/sync_latest_version"
 
 SERVICE_TOKEN = 'token'
 try:
@@ -42,6 +49,48 @@ def readiness():
 def liveness():
     """Liveness probe."""
     return flask.jsonify({}), 200
+
+
+@app.route('/api/v1/sync-graph-data', methods=['POST'])
+@login_required
+def sync_data():
+    """
+    Endpoint for carrying a sync of graph db data.
+
+    Takes in value to either call sync of non cve version
+    or latest version or both.
+
+    valid input: {
+        "non_cve_sync": True / False
+        "latest_version_sync: True / false
+        "cve_ecosystem": ['maven', 'pypi, 'npm']
+    }
+
+    """
+    resp = {
+        "success": True,
+        "message": "Sync operation started."
+    }
+
+    input_json = request.get_json()
+    non_cve_sync = input_json.get('non_cve_sync', False)
+    if non_cve_sync:
+        cve_ecosystem = input_json.get('cve_ecosystem', [])
+        if len(cve_ecosystem) == 0:
+            resp['success'] = False
+            resp['message'] = "Incorrect data.. Send cve_ecosystem for non_cve_sync operation"
+            return flask.jsonify(resp), 400
+        url = "http://{host}:{port}/{endpoint}".format(host=_SERVICE_HOST,
+                                                       port=_SERVICE_PORT,
+                                                       endpoint=_CVE_SYNC_ENDPOINT)
+        _session.post(url, json=cve_ecosystem)
+    latest_version_sync = input_json.get('latest_version_sync', False)
+    if latest_version_sync:
+        url = "http://{host}:{port}/{endpoint}".format(host=_SERVICE_HOST,
+                                                       port=_SERVICE_PORT,
+                                                       endpoint=_LATEST_VERSION_SYNC_ENDPOINT)
+        _session.post(url, json=['all'])
+    return flask.jsonify(resp), 200
 
 
 @app.route('/api/v1/register', methods=['POST'])
