# swagger.yaml
@@ -26,6 +26,36 @@ paths:
       responses:
         '200':
           description: Service is ready
+  /sync-graph-data:
+    post:
+      tags:
+        - Sync Graph DB
+      operationId: f8a_scanner.api_v1.sync-graph-data
+      summary: Sync the graph db data
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: body
+          name: repo
+          description: repository details and email id
+          required: true
+          schema:
+            $ref: '#/definitions/sync'
+      responses:
+        '200':
+          schema:
+            $ref: "#/definitions/syncresp"
+          description: Sync operation started
+        '400':
+          description: Bad request from the client
+        '401':
+          description: Request unauthorized
+        '404':
+          description: Data not found
+        '500':
+          description: Internal server error
   /register:
     post:
       tags:
@@ -177,7 +207,7 @@ paths:
       summary: Lists the available reports.
       description: >
         Lists the available stack analyses reports that have been generated offline. The frequency of these generated reports are weekly and monthly.
-        
+
         For listing monthly reports call `stacks-report/list/monthly` and for getting the list of weekly reports call `stacks-report/list/weekly`
       operationId: f8a_scanner.api_v1.list_reports
       produces:
@@ -241,6 +271,25 @@ paths:
         '404':
           description: No comparison data could be found
 definitions:
+  sync:
+    title: Sync operation request
+    properties:
+      non_cve_sync:
+        type: boolean
+      cve_ecosystem:
+        type: array
+        items:
+          type: string
+      latest_version_sync:
+        type: boolean
+  syncresp:
+    title: Sync operation response
+    description: Sync non cve version and latest version response
+    properties:
+      success:
+        type: boolean
+      summary:
+        type: string
   ComparisonReport:
     title: Comparison Report
     description: Comparison Report structure
